[package]
name        = "ulgate"
version     = "0.1.0"
edition     = "2021"
authors     = ["El Mehdi Makroumi"]
description = "ulgate: HTTP API gateway for the ULMEN ecosystem. Bring your model, watch magic happen."
license     = "BUSL-1.1"

[[bin]]
name = "ulgate"
path = "src/main.rs"

[lib]
name = "ulgate"
path = "src/lib.rs"

[dependencies]
ulmen-core = { path = "../lumen/ulmen-core" }
ulmcp      = { path = "../ulmcp" }
ulflow     = { path = "../ulflow" }
uldb       = { path = "../uldb" }
ulmp       = { path = "../ulmp" }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
lto           = true
codegen-units = 1
opt-level     = 3
strip         = true

[dev-dependencies]
tempfile = "3"
ureq = { version = "2", features = ["json"] }
